--- a/index.html
+++ b/index.html
@@ -1,1 +1,149 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Yingyi Zhang's Homepage</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+		}
+
+		h1 {
+			font-size: 36px;
+			font-weight: bold;
+			margin-bottom: 10px;
+		}
+
+		h2 {
+			font-size: 24px;
+			font-weight: bold;
+			margin-bottom: 10px;
+		}
+
+		h3 {
+			font-size: 20px;
+			font-weight: bold;
+			margin-bottom: 10px;
+		}
+
+		p {
+			margin-bottom: 10px;
+		}
+
+		ul {
+			margin-bottom: 10px;
+		}
+
+		li {
+			margin-bottom: 5px;
+		}
+
+		a {
+			color: #0000FF;
+			text-decoration: none;
+		}
+
+		a:hover {
+			text-decoration: underline;
+		}
+
+		section {
+			margin-bottom: 30px;
+		}
+
+		section:last-of-type {
+			margin-bottom: 0;
+		}
+	</style>
+</head>
+<body>
+	<header>
+		<h1>Yingyi Zhang's Resume</h1>
+		<p>mail: yingyizhang@mail.dlut.edu.cn | location: Liaoning, Dalian, China</p>
+	</header>
+
+	<section>
+		<h2>Education</h2>
+		<ul>
+			<li>
+				<strong>Dalian University of Technology (DLUT)</strong>, Dalian<br>
+				<em>PhD. student in Management Science and Engineering</em>, Sep. 2020 - Now<br>
+				<span>- Research focus: Diversified recommendation methods for O2O e-commerce, consumer behavior and intention modeling, multi-task and multi-domain recommendation.</span>
+				<!-- <li>- Award: Outstanding Graduate Student Award, DLUT, 2021</li> -->
+			</li>
+			<li>
+				<strong>Dalian University of Technology (DLUT)</strong>, Dalian<br>
+				<em>BS in Information Management and System</em>, Sep. 2016 - Jun. 2020<br>
+				<span>- Relevant coursework: Data Structures, Algorithms, Database Systems, Information Retrieval, Statistics, Machine Learning.</span>
+				<!-- <li>- Award: Outstanding Undergraduate Thesis Award, DLUT, 2020</li> -->
+			</li>
+		</ul>
+	</section>
+	
+	<section>
+		<h2>Technical Skills</h2>
+		<ul>
+			<li>Deep Learning: GNN, Attention, Meta Learning, Sequence Learning</li>
+			<li>Reinforcement Learning: DDPG, PPO, SAC, DQN, PG, Q-learning</li>
+			<li>Recommender Systems: STAR, PLE, MMOE, DIEN, DIN, Wide&amp;Deep, DeepFM</li>
+			<li>Drawing &amp; Typesetting: draw (the same as visio), LATEX, Beamer</li>
+			<li>Languages: Chinese (Native), English</li>
+		</ul>
+	</section>
+	
+	<section>
+		<h2>Publications</h2>
+		<ol>
+			<li>
+				<p>ZHANG Ying-yi, LI Xian-neng*, GUO Yan-hong, et al. Deep review-based recommendation from the perspective of consumer decision journey[J]. Journal of Management Science in China, (in Chinese) <a href="http://jmsc.tju.edu.cn/jmsc/article/abstract/202112152019">[Link]</a></p>
+			</li>
+			<li>
+				<p>Yingyi Zhang, Xianneng Li*, Yahe Yu, et al. 2023. Meta-Generator Enhanced Multi-Domain Recommendation. In Companion Proceedings of the ACM Web Conference 2023 (WWW'23 Companion), April 30-May 4, 2023, Austin, TX, USA. ACM, New York, NY, USA, <a href="https://doi.org/10.1145/3543873.3584652">[Link]</a></p>
+			</li>
+			<li>
+				<p>Yingyi Zhang, Xianneng Li*, Yahe Yu, et al. Entire Cost Enhanced Multi-Task Model for Online-to-Offline Conversion Rate Prediction. DL4SR’22: Workshop on Deep Learning for Search and Recommendation, co-located with the 31st ACM International Conference on Information and Knowledge Management (CIKM), October 17-21, 2022, Atlanta, USA, <a href="https://ceur-ws.org/Vol-3317/Paper4.pdf">[Link]</a></p>
+			</li>
+		</ol>
+	</section>
+
+    <section>
+        <h2>Research Projects</h2>
+        <ul>
+        <li>
+            <h3>Research on Diversified Recommendation Methods Facing Uncertainty of Consumer Demand in O2O E-commerce</h3>
+            <p>National Natural Science Foundation of China of Grant 72071029, PI (Xianneng Li), Sep. 2020 - Now</p>
+            <ul>
+            <li>Review-based Recommendation Algorithm</li>
+            <li>Consumer Behavior and Intention Modeling</li>
+            <li>Milti-Task and Multi-Domain Recommendation</li>
+            </ul>
+        </li>
+        <li>
+            <h3>Research on Cross Business Domain Complementary and Fusion Methods from Perspective of Consumer Behavior Understanding</h3>
+            <p>Projects entrusted by enterprises and institutions with Meituan, PI (Xianneng Li), Sep. 2021 - July. 2022</p>
+            <ul>
+            <li>Consumer Behavior and Intention Modeling</li>
+            <li>Milti-Task and Multi-Domain Recommendation</li>
+            </ul>
+        </li>
+        </ul>
+    </section>
+	<section>
+        <h2>Academic Conference</h2>
+			<ul>
+			<li>
+				<strong>International Academic Conference</strong><br>
+				<em>Virtual Presentation / Attendance</em> Oct. 2022<br>
+				<strong>Presentation:</strong> "Entire Cost Enhanced Multi-Task Model for Online-to-Offline Conversion Rate Prediction"<br>
+				<strong>Conference Name:</strong> DL4SR’22: Workshop on Deep Learning for Search and Recommendation, co-located with the 31st ACM International Conference on Information and Knowledge Management (CIKM)
+			</li>
+			<li>
+				<strong>Chinese Academic Conference</strong><br>
+				<em>Presentation / Attendance</em> Oct. 2021<br>
+				<strong>Presentation:</strong> "Research on comment-based recommendation algorithms from the perspective of social comparison theory"<br>
+				<strong>Conference Name:</strong> The First Academic Conference on Data Intelligence and Management.
+			</li>
+			</ul>
+    </section>
+</body>	
+</html>
