--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Yingyi Zhang's Homepage</title>
@@ -56,6 +57,7 @@
 		}
 	</style>
 </head>
+
 <body>
 	<header>
 		<h1>Yingyi Zhang's Resume</h1>
@@ -68,18 +70,20 @@
 			<li>
 				<strong>Dalian University of Technology (DLUT)</strong>, Dalian<br>
 				<em>PhD. student in Management Science and Engineering</em>, Sep. 2020 - Now<br>
-				<span>- Research focus: Diversified recommendation methods for O2O e-commerce, consumer behavior and intention modeling, multi-task and multi-domain recommendation.</span>
+				<span>- Research focus: Diversified recommendation methods for O2O e-commerce, consumer behavior and
+					intention modeling, multi-task and multi-domain recommendation.</span>
 				<!-- <li>- Award: Outstanding Graduate Student Award, DLUT, 2021</li> -->
 			</li>
 			<li>
 				<strong>Dalian University of Technology (DLUT)</strong>, Dalian<br>
 				<em>BS in Information Management and System</em>, Sep. 2016 - Jun. 2020<br>
-				<span>- Relevant coursework: Data Structures, Algorithms, Database Systems, Information Retrieval, Statistics, Machine Learning.</span>
+				<span>- Relevant coursework: Data Structures, Algorithms, Database Systems, Information Retrieval,
+					Statistics, Machine Learning.</span>
 				<!-- <li>- Award: Outstanding Undergraduate Thesis Award, DLUT, 2020</li> -->
 			</li>
 		</ul>
 	</section>
-	
+
 	<section>
 		<h2>Technical Skills</h2>
 		<ul>
@@ -90,60 +94,101 @@
 			<li>Languages: Chinese (Native), English</li>
 		</ul>
 	</section>
-	
+
 	<section>
 		<h2>Publications</h2>
 		<ol>
 			<li>
-				<p>ZHANG Ying-yi, LI Xian-neng*, GUO Yan-hong, et al. Deep review-based recommendation from the perspective of consumer decision journey[J]. Journal of Management Science in China, (in Chinese) <a href="http://jmsc.tju.edu.cn/jmsc/article/abstract/202112152019">[Link]</a></p>
+				<p>ZHANG Ying-yi, LI Xian-neng*, GUO Yan-hong, et al. Deep review-based recommendation from the
+					perspective of consumer decision journey[J]. Journal of Management Science in China, (in Chinese) <a
+						href="http://jmsc.tju.edu.cn/jmsc/article/abstract/202112152019">[Link]</a></p>
 			</li>
 			<li>
-				<p>Yingyi Zhang, Xianneng Li*, Yahe Yu, et al. 2023. Meta-Generator Enhanced Multi-Domain Recommendation. In Companion Proceedings of the ACM Web Conference 2023 (WWW'23 Companion), April 30-May 4, 2023, Austin, TX, USA. ACM, New York, NY, USA, <a href="https://doi.org/10.1145/3543873.3584652">[Link]</a></p>
+				<p>Yingyi Zhang, Xianneng Li*, Yahe Yu, et al. 2023. Meta-Generator Enhanced Multi-Domain
+					Recommendation. In Companion Proceedings of the ACM Web Conference 2023 (WWW'23 Companion), April
+					30-May 4, 2023, Austin, TX, USA. ACM, New York, NY, USA, <a
+						href="https://doi.org/10.1145/3543873.3584652">[Link]</a></p>
 			</li>
 			<li>
-				<p>Yingyi Zhang, Xianneng Li*, Yahe Yu, et al. Entire Cost Enhanced Multi-Task Model for Online-to-Offline Conversion Rate Prediction. DL4SR’22: Workshop on Deep Learning for Search and Recommendation, co-located with the 31st ACM International Conference on Information and Knowledge Management (CIKM), October 17-21, 2022, Atlanta, USA, <a href="https://ceur-ws.org/Vol-3317/Paper4.pdf">[Link]</a></p>
+				<p>Yingyi Zhang, Xianneng Li*, Yahe Yu, et al. Entire Cost Enhanced Multi-Task Model for
+					Online-to-Offline Conversion Rate Prediction. DL4SR’22: Workshop on Deep Learning for Search and
+					Recommendation, co-located with the 31st ACM International Conference on Information and Knowledge
+					Management (CIKM), October 17-21, 2022, Atlanta, USA, <a
+						href="https://ceur-ws.org/Vol-3317/Paper4.pdf">[Link]</a></p>
 			</li>
 		</ol>
 	</section>
 
-    <section>
-        <h2>Research Projects</h2>
-        <ul>
-        <li>
-            <h3>Research on Diversified Recommendation Methods Facing Uncertainty of Consumer Demand in O2O E-commerce</h3>
-            <p>National Natural Science Foundation of China of Grant 72071029, PI (Xianneng Li), Sep. 2020 - Now</p>
-            <ul>
-            <li>Review-based Recommendation Algorithm</li>
-            <li>Consumer Behavior and Intention Modeling</li>
-            <li>Milti-Task and Multi-Domain Recommendation</li>
-            </ul>
-        </li>
-        <li>
-            <h3>Research on Cross Business Domain Complementary and Fusion Methods from Perspective of Consumer Behavior Understanding</h3>
-            <p>Projects entrusted by enterprises and institutions with Meituan, PI (Xianneng Li), Sep. 2021 - July. 2022</p>
-            <ul>
-            <li>Consumer Behavior and Intention Modeling</li>
-            <li>Milti-Task and Multi-Domain Recommendation</li>
-            </ul>
-        </li>
-        </ul>
-    </section>
 	<section>
-        <h2>Academic Conference</h2>
-			<ul>
+		<h2>Research Projects</h2>
+		<ul>
+			<li>
+				<h3>Research on Diversified Recommendation Methods Facing Uncertainty of Consumer Demand in O2O
+					E-commerce</h3>
+				<p>National Natural Science Foundation of China of Grant 72071029, PI (Xianneng Li), Sep. 2020 - Now</p>
+				<ul>
+					<li>Review-based Recommendation Algorithm</li>
+					<li>Consumer Behavior and Intention Modeling</li>
+					<li>Milti-Task and Multi-Domain Recommendation</li>
+				</ul>
+			</li>
+			<li>
+				<h3>Research on Cross Business Domain Complementary and Fusion Methods from Perspective of Consumer
+					Behavior Understanding</h3>
+				<p>Projects entrusted by enterprises and institutions with Meituan, PI (Xianneng Li), Sep. 2021 - July.
+					2022</p>
+				<ul>
+					<li>Consumer Behavior and Intention Modeling</li>
+					<li>Milti-Task and Multi-Domain Recommendation</li>
+				</ul>
+			</li>
+		</ul>
+	</section>
+	<section>
+		<h2>Academic Conference</h2>
+		<ul>
 			<li>
 				<strong>International Academic Conference</strong><br>
 				<em>Virtual Presentation / Attendance</em> Oct. 2022<br>
-				<strong>Presentation:</strong> "Entire Cost Enhanced Multi-Task Model for Online-to-Offline Conversion Rate Prediction"<br>
-				<strong>Conference Name:</strong> DL4SR’22: Workshop on Deep Learning for Search and Recommendation, co-located with the 31st ACM International Conference on Information and Knowledge Management (CIKM)
+				<strong>Presentation:</strong> "Entire Cost Enhanced Multi-Task Model for Online-to-Offline Conversion
+				Rate Prediction"<br>
+				<strong>Conference Name:</strong> DL4SR’22: Workshop on Deep Learning for Search and Recommendation,
+				co-located with the 31st ACM International Conference on Information and Knowledge Management (CIKM)
 			</li>
 			<li>
 				<strong>Chinese Academic Conference</strong><br>
 				<em>Presentation / Attendance</em> Oct. 2021<br>
-				<strong>Presentation:</strong> "Research on comment-based recommendation algorithms from the perspective of social comparison theory"<br>
+				<strong>Presentation:</strong> "Research on comment-based recommendation algorithms from the perspective
+				of social comparison theory"<br>
 				<strong>Conference Name:</strong> The First Academic Conference on Data Intelligence and Management.
 			</li>
-			</ul>
-    </section>
-</body>	
+		</ul>
+	</section>
+	<section id="references">
+		<h2>References</h2>
+		<ul>
+			<li>
+				<div class="name"><strong>Prof. Xianneg Li</strong></div>
+				<div class="title"><em>Ph.D., Professor</em>, School of Economics and Management, Dalian University of
+					Technology (Class A Double First Class University), Dalian, China</div>
+				<div class="location">
+					<a href="http://faculty.dlut.edu.cn/li/en/index.htm" target="_blank"><i
+							class="fas fa-external-link-alt"></i> Homepage</a> |
+					<a href="mailto:xianneg@dlut.edu.cn"><i class="fas fa-envelope"></i> xianneg@dlut.edu.cn</a>
+				</div>
+			</li>
+			<li>
+				<div class="name"><strong>Asst. Prof. Yahe Yu</strong></div>
+				<div class="title"><em>Ph.D., Assistant Professor</em>, School of Economics and Management, Dalian
+					University of Technology (Class A Double First Class University), Dalian, China</div>
+				<div class="location">
+					<a href="http://faculty.dlut.edu.cn/yuyahe/en/index.htm" target="_blank"><i
+							class="fas fa-external-link-alt"></i> Homepage</a> |
+					<a href="mailto:yaheyu@dlut.edu.cn"><i class="fas fa-envelope"></i> yaheyu@dlut.edu.cn</a>
+				</div>
+			</li>
+		</ul>
+	</section>
+</body>
+
 </html>
