--- a/index.html
+++ b/index.html
@@ -4,64 +4,145 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Yingyi Zhang's Homepage</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-Btkr8rha11mXNh1R/ULhTZZT/8xvJO69ivzabgqCKsUyoHcdFQvNc3d3qI9a+e57aQlK+BfiYFwO+1Gm0mLcug==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
 	<style>
 		body {
-			font-family: Arial, sans-serif;
+			background-color: #F7F7F7;
+			font-family: 'Montserrat', sans-serif;
+			color: #333;
+			margin: 1;
+			padding: 0;
+			line-height: 1.5;
+		}
+
+		header {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: center;
+			padding: 20px;
+			background-color: #fff;
+			box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+		}
+
+		.header-left {
+			flex-grow: 1;
+		}
+
+		.header-right {
+			margin-left: 20px;
 		}
 
 		h1 {
-			font-size: 36px;
-			font-weight: bold;
-			margin-bottom: 10px;
+			font-size: 2.5rem;
+			margin: 0;
+			padding: 0;
 		}
 
-		h2 {
-			font-size: 24px;
-			font-weight: bold;
-			margin-bottom: 10px;
+		nav {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			background-color: #E7E7E7;
+			box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+			padding: 10px;
+			margin-bottom: 20px;
 		}
 
-		h3 {
-			font-size: 20px;
-			font-weight: bold;
-			margin-bottom: 10px;
-		}
-
-		p {
-			margin-bottom: 10px;
-		}
-
-		ul {
-			margin-bottom: 10px;
-		}
-
-		li {
-			margin-bottom: 5px;
-		}
-
-		a {
-			color: #0000FF;
+		nav a {
+			color: #333;
 			text-decoration: none;
+			font-size: 1.2rem;
+			margin: 0 20px;
+			transition: color 0.2s;
 		}
 
-		a:hover {
-			text-decoration: underline;
+		nav a:hover {
+			color: #292929;
+		}
+
+		.container {
+			max-width: 800px;
+			margin: 0 auto;
+			padding: 20px;
 		}
 
 		section {
-			margin-bottom: 30px;
+			margin-bottom: 40px;
 		}
 
-		section:last-of-type {
-			margin-bottom: 0;
+		h2 {
+			font-size: 2rem;
+			margin-bottom: 20px;
 		}
+		.contact-info {
+			margin: 0;
+			font-size: 16px;
+			line-height: 22px;
+			color: #666;
+		}
+
+		.contact-info a {
+			color: #333;
+			text-decoration: none;
+			border-bottom: 1px dotted #333;
+			transition: border-bottom 0.2s ease-in-out;
+		}
+
+		.contact-info a:hover {
+			border-bottom: 1px solid #333;
+		}
+
+		ul {
+			list-style: none;
+			padding: 0;
+			margin: 0;
+		}
+
+		ul li {
+			margin-bottom: 10px;
+		}
+
+		ul li i {
+			margin-right: 10px;
+		}
+
+		footer {
+			background-color: #292929;
+			color: #F7F7F7;
+			text-align: center;
+			padding: 20px;
+			box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.1);
+		}
+
+		footer a {
+			color: #F7F7F7;
+			text-decoration: none;
+			font-weight: bold;
+			transition: color 0.2s;
+		}
+
+		footer a:hover {
+			color: #E7E7E7;
+		}
+
 	</style>
 </head>
 
 <body>
 	<header>
-		<h1>Yingyi Zhang's Resume</h1>
-		<p>mail: yingyizhang@mail.dlut.edu.cn | location: Liaoning, Dalian, China</p>
+		<div class="header-left">
+			<h1>Yingyi Zhang</h1>
+		</div>
+		<div class="header-right">
+			<p class="contact-info">
+				<i class="fas fa-envelope"></i> Email: <a href="mailto:yingyizhang@mail.dlut.edu.cn">yingyizhang@mail.dlut.edu.cn</a> 
+				<br>
+				<i class="fas fa-map-marker-alt"></i> Location: Liaoning, Dalian, China
+			</p>
+		</div>
+	
 	</header>
 
 	<section>
