--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 
 		.header-left {
 			flex-grow: 1;
+			
 		}
 
 		.header-right {
-			margin-left: 20px;
+			flex-grow: 1;
+			margin-right: 30px;
 		}
 
 		h1 {
@@ -143,9 +145,12 @@
 
 <body>
 	<header>
+		
 		<div class="header-left">
 			<h1>Yingyi Zhang</h1>
+			
 		</div>
+		
 		<div class="header-right">
 			<p class="contact-info">
 				<i class="fas fa-envelope"></i> Email: <a href="mailto:yingyizhang@mail.dlut.edu.cn">yingyizhang@mail.dlut.edu.cn</a> 
@@ -153,7 +158,9 @@
 				<i class="fas fa-map-marker-alt"></i> Location: Liaoning, Dalian, China
 			</p>
 		</div>
-		
+		<nav>
+			<a href="./YingyiZhang_CV.pdf" target="_blank">Resume</a>
+		</nav>
 	
 	</header>
 
