--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
 
 <body>
 	<header>
-		
 		<div class="header-left">
 			<h1>Yingyi Zhang</h1>
 			
@@ -274,7 +273,7 @@
 				<div class="location">
 					<a href="http://faculty.dlut.edu.cn/li/en/index.htm" target="_blank"><i
 							class="fas fa-external-link-alt"></i> Homepage</a> |
-					<a href="mailto:xianneg@dlut.edu.cn"><i class="fas fa-envelope"></i> xianneg@dlut.edu.cn</a>
+					<a href="mailto:xianneng@dlut.edu.cn"><i class="fas fa-envelope"></i> xianneg@dlut.edu.cn</a>
 				</div>
 			</li>
 			<li>
