change the topic

--- a/index.html
+++ b/index.html
@@ -190,24 +190,27 @@
         <section>
             <h2>Education</h2>
             <ul>
-                <li>
-                    <strong>Dalian University of Technology (DLUT)</strong>, Dalian<br>
-                    <em>PhD. student in Management Science and Engineering</em>, Sep. 2020 - Now<br>
-                    <span>- Research focus: Diversified recommendation methods for O2O e-commerce, consumer behavior
-                        and
-                        intention modeling, multi-task and multi-domain recommendation.</span>
+				<li>
+                    <strong>City University of Hong Kong (CityU)</strong>, Hong Kong<br>
+                    <em>PhD. student in the scool of data science</em>, Sep. 2024 - Now<br>
+                    <span>- Research focus: Consumer theory-driven recommendation.</span>
                 </li>
                 <li>
-                    <strong>Dalian University of Technology (DLUT)</strong>, Dalian<br>
+                    <strong>Dalian University of Technology (DUT)</strong>, Dalian<br>
+                    <em>PhD. student in Management Science and Engineering</em>, Sep. 2020 - Now<br>
+                    <span>- Research focus: Diversified recommendation methods for O2O e-commerce, consumer behavior and intention modeling, multi-task and multi-domain recommendation.</span>
+                </li>
+                <li>
+                    <strong>Dalian University of Technology (DUT)</strong>, Dalian<br>
                     <em>BS in Information Management and System</em>, Sep. 2016 - Jun. 2020<br>
-                    <span>- Relevant coursework: Data Structures, Algorithms, Database Systems, Information Retrieval,
-                        Statistics, Machine Learning.</span>
+                    <span>- Relevant coursework: Data Structures, Algorithms, Database Systems, Information Retrieval, Statistics, Machine Learning.</span>
                 </li>
             </ul>
         </section>
         <section>
             <h2>Technical Skills</h2>
             <ul>
+				<li>Large Language Model: LLM+Rec</li>
                 <li>Deep Learning: GNN, Attention, Meta Learning, Sequence Learning</li>
                 <li>Reinforcement Learning: DDPG, PPO, SAC, DQN, PG, Q-learning</li>
                 <li>Recommender Systems: STAR, PLE, MMOE, DIEN, DIN, Wide&amp;Deep, DeepFM</li>
